tarpc/tests/compile_fail/tarpc_service_fn_new.rs
#[tarpc::service]
trait World {
    async fn new();
}

fn main() {}
